# psi-watch

./: .gitignore  Cargo.toml  build.rs  diagram.json  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  rust_ci.yml
docs/: README.md
scripts/: flash.sh
src/: main.rs
