[package]
name = "psi-watch"
version = "0.1.0"
authors = ["Ruslan Sovinskyy <ruslan.sovinskyy@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.20.1", default-features = false, features = [
    "esp32",
    "embedded-hal",
] }
esp-println = { version = "0.11.0", features = ["esp32", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.4.0" }
embedded-svc = { version = "0.28.0", default-features = false, features = [] }
embedded-graphics = "0.8.1"
ssd1306 = "0.9.0"
u8g2-fonts = { version = "0.4.0", features = ['embedded_graphics_textstyle'] }
tinybmp = "0.6.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
